[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_utils"
version = "0.0.1"
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "requests",
    'importlib-metadata; python_version<"3.10"',
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]